force-app/main/default/objects/Exchange_Rate_API_Config__mdt/Exchange_Rate_API_Config__mdt.object-meta.xml
<CustomObject>
    <label>Exchange Rate API Config</label>
    <pluralLabel>Exchange Rate API Configs</pluralLabel>
</CustomObject>