force-app/main/default/objects/Exchange_Rate_API_Config__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Name of Apex Class to call from Schedulable for Exchange Rate API</description>
    <label>Apex Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>