force-app/main/default/objects/Exchange_Rate_API_Config__mdt/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>