force-app/main/default/objects/Exchange_Rate_API_Config__mdt/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <description>Base Currency Code ex. USD</description>
    <label>Base Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>